tooling/nargo_cli/tests/snapshots/execution_success/pred_eq/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: Field, y: Field) {
    let p: bool = x == y;
    assert(p == true);
}
