tooling/nargo_cli/tests/snapshots/execution_success/pred_eq/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : 1",
    "private parameters indices : [0, 1]",
    "public parameters indices : []",
    "return value indices : []",
    "EXPR [ (1, _0) (-1, _1) 0 ]",
    "",
    ""
  ],
  "debug_symbols": "TYzLCsMgEEX/ZdZZ2EVb8FdKCT7GMCCjjFookn+PCQlkee7hng4ebVtm4pAK6E+HmJyplHhQB3VMJRveqVQjFfTrMQGyB/1W6wSBIoJ+qvU7wArFSMt8j4z5Z4SMjXhiaOxutv7zZa5/luTQN8G9dLiR3wA=",
  "file_map": {
    "50": {
      "source": "fn main(x: Field, y: Field) {\n    let p = x == y;\n    assert(p == true);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
